--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <p class="es-cross__name">
                             <strong>SYROP</strong> 30mg/5ml
                         </p>
-                        <p class="es-cross__capacity">
+                        <p class="es-cross__capacity es-cross__capacity--200">
                             <strong>200ML</strong>
                         </p>
                         <a href="#" target="_blank" class="es-cross__link">SPRAWDŹ</a>
